--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "next",
+        "dev": "next -p 3000",
         "build": "next build"
     },
     "author": "Jimin Kim",
@@ -13,8 +13,12 @@
         "@ant-design/icons": "^4.7.0",
         "antd": "^4.20.5",
         "next": "^9.5.5",
+        "next-redux-wrapper": "^6.0.2",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-redux": "^8.0.2",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
