--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "antd": "^4.20.5",
         "next": "^9.5.5",
         "next-redux-wrapper": "^6.0.2",
+        "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.2",
