--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "antd": "^4.20.5",
+        "axios": "^0.27.2",
         "next": "^9.5.5",
         "next-redux-wrapper": "^6.0.2",
         "prop-types": "^15.8.1",
@@ -21,12 +22,17 @@
         "react-slick": "^0.29.0",
         "redux": "^4.2.0",
         "redux-devtools-extension": "^2.13.9",
+        "redux-saga": "^1.1.3",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "eslint": "^8.17.0",
+        "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-hooks": "^0.4.3",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-react": "^7.30.0"
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.5.0"
     }
 }
